[gd_scene load_steps=10 format=3 uid="uid://bc3145h25bs6t"]

[ext_resource type="Texture2D" uid="uid://l2ajnvvfimuh" path="res://Assets/galaxy.png" id="1_5yls4"]
[ext_resource type="Script" uid="uid://bc5hy3u1pl6f" path="res://Scenes/Main/main.gd" id="1_hryqi"]
[ext_resource type="Texture2D" uid="uid://desww6me4wdy3" path="res://Assets/background_without_star.png" id="1_p6jpk"]
[ext_resource type="PackedScene" uid="uid://cm88p7x37bw1i" path="res://Scenes/Paddle/paddle.tscn" id="2_lixft"]
[ext_resource type="PackedScene" uid="uid://dysp371cjgrou" path="res://Scenes/Ball/ball.tscn" id="3_qw60k"]
[ext_resource type="Texture2D" uid="uid://hkxu3yd6o1vv" path="res://Assets/galaxy_hurt.png" id="3_xlvfx"]
[ext_resource type="PackedScene" uid="uid://cbvq5i4wnlsk1" path="res://Scenes/UI/ui.tscn" id="4_5yls4"]
[ext_resource type="Texture2D" uid="uid://c0f4svmed72wq" path="res://Assets/galaxy_broke.png" id="4_y3v7k"]
[ext_resource type="AudioStream" uid="uid://bxenp5q8pcyvj" path="res://Assets/sounds/game_screen.ogg" id="9_hryqi"]

[node name="Main" type="Node2D"]
script = ExtResource("1_hryqi")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("1_p6jpk")

[node name="Galaxy" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("1_5yls4")

[node name="GalaxyHurt" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("3_xlvfx")

[node name="GalaxyBroke" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("4_y3v7k")

[node name="Paddle" parent="." instance=ExtResource("2_lixft")]

[node name="Ball" parent="." instance=ExtResource("3_qw60k")]
position = Vector2(117.01, 136.584)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FlashRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0)

[node name="UI" parent="CanvasLayer" instance=ExtResource("4_5yls4")]

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_hryqi")
autoplay = true
parameters/looping = true
